app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-open-sans), sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-poppins), sans-serif;
}

